syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.hzk.proto";
// option java_outer_classname = "DemoServiceProto";
// option objc_class_prefix = "DEMOSRV";

package demoservice;


service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}


message HelloRequest {
  string name = 1;
}


message HelloReply {
  string message = 1;
}
